[SRS] Finish SRS sceleton and add 2 chapter

--- a/doc/srs/SRS.adoc
+++ b/doc/srs/SRS.adoc
@@ -31,7 +31,7 @@ a|Осока Данііл
 Документ фіксує детальні вимоги до інформаційної системи "Аеропорт" для їх однозначного розуміння всіма учасниками розробки системи.
 
 === Визначення, акроніми та скорочення
-.Історія змін
+.Визначення, акроніми та скорочення
 [width="100%", options="header"]
 |=====================================
 |Термін|Визначення
@@ -39,9 +39,75 @@ a|Осока Данііл
 |=====================================
 
 === Посилання
-*TBD*
+Вимоги співвласників та бачення продукту наявні в документі "Технічне завдання" (TR.pdf).
 
 === Короткий опис системи
 
 Інформаційна система "Аеропорт" - система, призначена для автоматизації роботи відділу продаж квитків на рейси аеропорту.
 
+== Загальний опис
+
+=== Огляд прецендентів
+
+Короткий опис акторів системи:
+
+.Актори системи
+[width="100%", options="header"]
+|=====================================
+|Актор|Короткий опис 
+
+a|Користувач
+a|Рядовий користувач системи. Має можливість переглянути список доступних рейсів, знайти або відфільтрувати рейси за певним набором критеріїв, придбати онлайн або забронювати квиток, має можливість використовувати накопичені бонуси.
+
+a|Адміністратор
+a|Адмініструє систему. Має можливість додавати, коректувати і видаляти інформацію про авіарейси і про користувачів.
+
+|=====================================
+
+Список варіантів використання:
+
+.Реєстр варіантів використання
+[width="100%", options="header"]
+|=====================================
+|Код|Основний актор|Найменування|Суть
+
+a|U1
+a|Користувач
+a|Пошук авіарейсів за параметрами
+a|За необхідності отримати список авіарейсів з певними параметрами, користувач може використати функцію пошуку авіаквитків.
+
+a|U2
+a|Користувач
+a|Отримання інформації по авіарейсу
+a|Користувач може отримати повну інформацію по конкретному авіарейсу.
+
+a|U3
+a|Користувач
+a|Придбання або бронювання квитка
+a|Користувач може забронювати квиток на обраний авіарейс, при цьому він має можливість або повністю оплатити квиток онлайн, або оплатити бронь пізніше в касі. Також користувач може використовувати бонуси як для повної, так і для часткової оплати квитків.
+
+a|A1
+a|Адміністратор
+a|Адміністрування інформації про авіарейси
+a|Адміністратор має можливість додавати нові авіарейси, корегувати інформацію про вже існуючі, а також видаляти авіарейси з бази даних.
+
+a|A2
+a|Адміністратор
+a|Адміністрування інформації про користувачів
+a|Адміністратор має можливість отримати інформацію по кожному з користувачів системи. За необхідності може корегувати інформацію користувача, а також заблокувати користувачу доступ до системи. 
+
+|=====================================
+
+=== Припущення і залежності
+
+Дана система буде використовуватися у відкритому доступі для користувачів. Але оскільки ситсема використвуватиметься з прив'язкою до певнеого аеропорта, то адміністратори мають бути групою співробітників аеропорту, що мають доступ до внутрішньої інформації щодо діяльності аеропорту, та підпорядковуються певному керівництву, що приймає рішення про зміни в базі системи. 
+
+В разі розширення списку необхідноЇ інформації про авіарейси система вимагатиме незначних змін (переконфігурація бази данних та додання нової інформації). Аналогічні зміни потрібні в разі розширення списку інформації про користувача з деяким можливим доповненням: у випадку, коли нові поля будуть обов'язковими для заповнення користувачами, необхідно розробити додаткой інтерфейс шо буде сповіщувати про це користувача.
+
+== Опис вимог
+
+*TBD*
+
+== Допоміжна інформація
+
+*TBD*
