[SRS] Add new usage case

--- a/doc/srs/SRS.adoc
+++ b/doc/srs/SRS.adoc
@@ -94,7 +94,12 @@ a|Адміністратор має можливість додавати нов
 a|A2
 a|Адміністратор
 a|Адміністрування інформації про користувачів
-a|Адміністратор має можливість отримати інформацію по кожному з користувачів системи. За необхідності може корегувати інформацію користувача, а також заблокувати користувачу доступ до системи. 
+a|Адміністратор має можливість отримати інформацію по кожному з користувачів системи. За необхідності може корегувати інформацію користувача, а також заблокувати користувачу доступ до системи.
+
+a|A3
+a|Адміністратор
+a|Адміністрування інформації про замовлення
+a|*TBD*
 
 |=====================================
 
@@ -106,7 +111,27 @@ a|Адміністратор має можливість отримати інф
 
 == Опис вимог
 
-*TBD*
+=== Короткий опис вимог
+
+==== U1. Пошук авіарейсів за параметрами
+
+[width="100%", options="noheader", cols="4"]
+|======================================
+|U1
+|Користувач
+|Пошук авіарейсів за параметрами
+|За необхідності отримати список авіарейсів з певними параметрами, користувач може використати функцію пошуку авіаквитків.
+|======================================
+
+_Основна діюча особа_: Користувач
+
+_Інші учасники преценденту_: відсутні
+
+_Зв'язки з іншими прецендентами_: відсутні
+
+_Короткий опис_:
+
+Даний варіант використання дозволяє Користувачу отримати список авіарейсів, шо обслуговуються аеропортом та задовольняють заданим Користувачем параметрам пошуку. До параметрів пошуку входять: дата вильоту *TBD*
 
 == Допоміжна інформація
 
