[SRS] Implement functional and usability reqs

--- a/doc/srs/SRS.adoc
+++ b/doc/srs/SRS.adoc
@@ -38,7 +38,7 @@ a|Осока Данііл
 
 |=====================================
 
-=== Посилання
+=== Посилання [[references]]
 Вимоги співвласників та бачення продукту наявні в документі "Технічне завдання" (TR.pdf).
 
 === Короткий опис системи
@@ -146,7 +146,7 @@ a|Адміністратор має можливість отримати інф
 
 === Короткий опис вимог
 
-==== U1. Пошук авіарейсів за параметрами
+==== U1. Пошук авіарейсів за параметрами [[U1]]
 
 [width="100%", options="noheader", cols="4"]
 |======================================
@@ -166,6 +166,60 @@ _Короткий опис_:
 
 Даний варіант використання дозволяє Користувачу отримати список авіарейсів, шо обслуговуються аеропортом та задовольняють заданим Користувачем параметрам пошуку. До параметрів пошуку входять: дата вильоту *TBD*
 
+*TBD*
+
+=== Повні описання варіантів використання
+
+==== Повний опис варіанту використання AU1
+*TBD*
+
+==== Діаграма прецедентів
+*TBD*
+
+=== Спеціальні вимоги
+
+==== _Функціональність_
+
+===== F1. Розділення функціональності акторрів
+
+Авторизований і Неавторизований Користувачі мають певний набір спільних функціональних можливостей (вимоги <<U1>> та <<U2>>). Також кожен з цих двох акторів має можливість ставати іншим з цих двої акторів шляхом авторизації/деавторизації в системі (вимоги <<NU2>> та <<AU2>> відповідно).
+
+Адміністратор на відмінність від перерахованих вище ролей не має спільного функціоналу з іншими акторами, а також не може ставати іншим актором при будь-яких діях.
+
+Користувачі і Адміністратори мають окремі інтерфейси для взаємодії з системою.
+
+===== F2. Ведення переліку доступних авіарейсів
+
+Адміністратор має підтримувати інформацію про авіарейси в базі даних в стані, що відповідає актульній інформації про доступні авіарейси аеропорту.
+
+===== F3. Система нарахування бонусів
+
+Нарахування бонусів відбувається з прив'язкою до конкретного аеропорту. Користувач отримує і може витрачати бонуси в лище рамках даної системи.
+
+Бонуси нараховуються по принципу 1 бонус за 1 милю польоту.
+
+Бонуси можна витрачати при покупці авіаквитків, конвертуючи бонуси у валюту з певним коефіціентом, що оговорюється з замовником окремо.
+
+==== _Застосовність_
+
+===== I1. Зручність використання
+
+Інтерфейс для Авторизованого/Неавторизованого Користувача має юути інтуїтивно зрозумілим і не вимагати попередньої підготовки до використання.
+
+Інтерфейс для Адміністратора розрахований на підготовленого співробітника аеропорту.
+
+===== I2. Допомога в режимі онлайн
+
+Інтерфейс для Авторизованого/Неавторизованого Користувача має містити контактну інформацію для допомоги в режимі онлайн.
+
+==== _Надійність_
+
+*TODO*: take it from TR + BD backups (functional too?)
+
+==== _Придатність до експлуатації_
+
+==== _Обмеження проектування_
+
 == Допоміжна інформація
 
-*TBD*
+Перелік допоміжної інформації наявний в пункті <<references, 1.4>>
