[SRS] Fully implement special reqs

--- a/doc/srs/SRS.adoc
+++ b/doc/srs/SRS.adoc
@@ -192,13 +192,7 @@ _Короткий опис_:
 
 Адміністратор має підтримувати інформацію про авіарейси в базі даних в стані, що відповідає актульній інформації про доступні авіарейси аеропорту.
 
-===== F3. Система нарахування бонусів
-
-Нарахування бонусів відбувається з прив'язкою до конкретного аеропорту. Користувач отримує і може витрачати бонуси в лище рамках даної системи.
-
-Бонуси нараховуються по принципу 1 бонус за 1 милю польоту.
-
-Бонуси можна витрачати при покупці авіаквитків, конвертуючи бонуси у валюту з певним коефіціентом, що оговорюється з замовником окремо.
+===== F3. Система нарахаовником окремо.
 
 ==== _Застосовність_
 
@@ -214,11 +208,47 @@ _Короткий опис_:
 
 ==== _Надійність_
 
-*TODO*: take it from TR + BD backups (functional too?)
+===== R1. Доступність
+
+Для всіх акторів система має бути доступна постійно в умовах безвідмовної роботи.
+
+Час безвідмовної роботи системи має складати 95% на рік при умові безвідмовної роботи мережі.
+
+===== R2. Відновлення після відмови
+
+Час відновлення після відмови, спричиненої зовнішніми факторами (збій електропостачання, відсутність Інтернету) не має перевищувати час, необхідний для усунення фатального впливу цих факторів.
+
+Час відновлення після відмови, спричиненої фатальним збоєм операційної системи, не має перевищувати час, необхідний для перезапуску/перевстановлення її та інших необхідних програмних засобів.
+
+Час відновлення після відмови, спричиненої некоректними діями користувача чи адміністратора, не має перевищувати 15 хвилин. Для запобігання виникнення таких ситуацій має здійснюватися аутентифікація користувачів/адміністраторів, валідація введених даних на різних етапах обробки, а також має бути проведене тестування системи для виявлення та усунення багів, що призводять до помилок.
+
+===== R3. Архівування бази даних
+
+Архівування бази даних відбувається автоматично з певною періодичністю, що окремо оговорюється з замовником.
 
 ==== _Придатність до експлуатації_
 
+===== E1. Оновлення версій
+
+В разі зміни версії системи від актора не вимагається нічого, окрім оновлення веб-сторінки з інетрфейсом системи.
+
 ==== _Обмеження проектування_
+
+===== X1. Вимоги до середи виконання
+
+* Доступ до інтернету
+* Актуальний веб-браузер (під актуальним мається на увазі браузер версії, що досі підтримується розробниками)
+* оперативну пам’ять обсягом не менше 1 Гб
+* відеокарту, монітор, засоби вводу (миша, клавіатура, тач-скрін тощо)
+
+===== X2. Стек допустимих технологій
+
+* Python, Golang
+* MySQL, PgSQL, Redis (optional)
+* OAuth2 + JWT/SWT
+* Git
+* k8s/microk8s, Docker
+* React + Redux, JS/TS, CSS/SASS
 
 == Допоміжна інформація
 
