[SRS] Finish SRS

--- a/doc/srs/SRS.adoc
+++ b/doc/srs/SRS.adoc
@@ -389,8 +389,80 @@ _Короткий опис_:
 
 === Повні описання варіантів використання
 
-==== Повний опис варіанту використання AU1
-*TBD*
+==== Повний опис варіанту використання AU1. Придбання або бронювання квитка
+===== Короткий опис
+
+Авторизований Користувач проводить процедуру оформлення замовлення
+
+_Діючі актори_: Авторизований Користувач
+
+===== Потік подій
+
+Прецедент починається, коли Авторизований Користувач в інтерфейсі перегляду інформації про рейс натискає на кнопку "Замовити"
+
+====== _Базовий потік - Оплата повністю_
+
+1. Авторизований користувач натискає кнопку "Замовити".
+
+2. Система показує діалогове вікно для уточнення замовлення.
+
+3. Авторизований користувач вказує бажаний клас квитка.
+
+4. Система показує наступне діалогове вікно для вибору типу оплати. Також тут указано суму до сплати.
+
+5. Користувач обирає серед варіантів: "Оплатити в касі", "Олатити частину бонусами", "Оплатити повністю".
+
+6. Користувач натискає "Оплатити повністю" [[p6]]
+
+7. Система відібражає діалогове вікно для введення даним для оплати онлайн. [[p7]]
+
+8. Користувач проводить оплату
+
+9. Оплата успішна [[p9]]
+
+10. Система фіксує замовлення і відібражає вікно з надписом "Замовлення виконано успішно" і надає клієнту інформацію про нього.
+
+====== _Альтернативний потік - Оплата бонусами_
+
+Якщо при виконанні <<p6, п.6 базового потоку подій>> Авторизований Користувач обирає варіант "Оплатити частину бонусами", то:
+
+1. Система видає діалогове вікно для обрання частки суми, що користувач бажає оплатити бонусами. Користувач може вказати суму не більшу ніж має бонусів на рахунку, а також частка оплати валютою має складати щонайменше 1 найменшу одиницю валюти, в якій проводиться розрахунки в системі.
+
+2. Користувач указує суму бонусів, що бажає витратити
+
+3. Перехід до <<п.7 базового потоку подій>>
+
+====== _Альтернативний потік - Оплата в касі_
+
+Якщо при виконанні <<p6, п.6 базового потоку подій>> Авторизований Користувач обирає варіант "Оплатити в касі", то:
+
+1. Перехід до <<п.7 базового потоку подій>>
+
+====== _Альтернативний потік - Помилка оплати_
+
+Якщо при виконанні <<p9, п.9 базового потоку подій>> Оплата проходить неуспішно, то:
+
+1. Система сповіщає про помилку
+
+2. Перехід до <<п.7 базового потоку подій>>
+
+===== Спеціальні умови
+
+Відсутні
+
+===== Передумови
+
+====== _Знаходження в інтерфейсі перегляду рейсу_
+
+Авторизований користувач має знаходитись в інтерфейсі перегляду інформації про рейс (така передумова досягається в результаті виконання прецеденту <<U1>>).
+
+===== Постумови
+
+Авторизований користувач опиняється в тому інтерфейсі перегляду інформації про рейс, в якому знаходився до виконання прецеденту.
+
+===== Точки розширення
+
+Відсутні
 
 ==== Діаграма прецедентів
 // TODO: update this to master after merge
