--- a/doc/ux/ux.adoc
+++ b/doc/ux/ux.adoc
@@ -271,25 +271,31 @@ a|?
 .Task Flow наміру "переглянути доступні рейси, що задовольняють певні критерії"
 image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU1.puml[NU1]
 
+{nbsp} +
 
 .Task Flow наміру "переглянути повну інформацію про авіарейс"
 image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU2.puml[NU2]
 
+{nbsp} +
 
 .Task Flow наміру "зареєструватися"
 image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU3.puml[NU3]
 
+{nbsp} +
 
 .Task Flow наміру "зайти в існуючий профіль"
 image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU4.puml[NU4]
 
+{nbsp} +
 
 .Task Flow наміру "переглянути інформацію про сайт"
 image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU5.puml[NU5]
 
+{nbsp} +
 
 .Task Flow наміру "зв'язатися зі службою підтримки аеропорту"
 image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU6.puml[NU6]
+
 
 === Авторизований користувач
 
@@ -310,6 +316,39 @@ image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent
 
 ==== Task Flow
 
+Task Flow для намірів "переглянути доступні рейси, що задовольняють певні критерії", "переглянути повну інформацію про авіарейс", "переглянути інформацію про сайт" та "зв'язатися зі службою підтримки аеропорту" збігаються з аналогічними для Неавторизованого корисутувача.
+
+Для подальших Task Flow вважатимемо, що Авторизований користувач вже відкрив сайт.
+
+.Task Flow наміру "замовити квиток"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU3.puml[AU3]
+
+{nbsp} +
+
+.Task Flow наміру "переглянути або/та відредагувати інформацію свого профілю"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU4.puml[AU4]
+
+{nbsp} +
+
+.Task Flow наміру "переглянути історію замовлених перельотів"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU5.puml[AU5]
+
+{nbsp} +
+
+.Task Flow наміру "переглянути доступні бонуси"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU6.puml[AU6]
+
+{nbsp} +
+
+.Task Flow наміру "вийти з профілю"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU7.puml[AU7]
+
+{nbsp} +
+
+.Task Flow наміру "видалити профіль"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU8.puml[AU8]
+
+
 === Адміністратор
 
 ==== Високорівневі наміри
@@ -322,10 +361,54 @@ image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent
 * додати новий рейс
 * переглянути список користувачів
 * адмініструвати інформацію про існуючого користувача
-* переглянути список замовлення
+* переглянути список замовлень
 * адмініструвати інформацію про існуюче замовлення
 * вийти з системи
 
 ==== Task Flow
+
+.Task Flow наміру "авторизуватися в системі"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A1.puml[A1]
+
+Для подальших Task Flow вважатимемо, що Адміністратор вже відкрив сайт та авторизувався в системі.
+
+.Task Flow наміру "переглянути список авіарейсів"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A2.puml[A2]
+
+{nbsp} +
+
+.Task Flow наміру "адмініструвати інформацію про існуючий рейс"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A3.puml[A3]
+
+{nbsp} +
+
+.Task Flow наміру "додати новий рейс"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A4.puml[A4]
+
+{nbsp} +
+
+.Task Flow наміру "переглянути список користувачів"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A5.puml[A5]
+
+{nbsp} +
+
+.Task Flow наміру "адмініструвати інформацію про існуючого користувача"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A6.puml[A6]
+
+{nbsp} +
+
+.Task Flow наміру "переглянути список замовлень"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A7.puml[A7]
+
+{nbsp} +
+
+.Task Flow наміру "адмініструвати інформацію про існуюче замовлення"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A8.puml[A8]
+
+{nbsp} +
+
+.Task Flow наміру "вийти з системи"
+image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A9.puml[A9]
+
 
 == Уточнення моделі вмісту для критичного прецедента
