#3 reorder sections, reimagine intents and taskflow, add wireflow, another minor adjustments

--- a/doc/ux/ux.adoc
+++ b/doc/ux/ux.adoc
@@ -7,6 +7,104 @@
 :toclevels: 3
 :sectnums:
 
+// :url: https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/master/doc/ux/taskflow/
+
+// :wurl: https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/master/doc/ux/wireflow/wireflow.png
+
+.Історія змін
+[width="100%", options="header"]
+|=====================================
+|Дата|Версія|Опис|Автор
+
+a|31.10.2021
+a|0.1
+a|Початкове створення
+a|Цубін Софія
+
+|=====================================
+
+== Діяльність акторів
+
+=== Неавторизований користувач
+
+==== Високорівневі наміри
+
+Актор Неавторизований користувач має такі високорівневі наміри:
+
+. переглянути інформацію про авіарейси
+. зареєструватися
+. дізнатися більше про аеропорт
+
+==== Task Flow
+
+.Task Flow наміру 1
+//image::{url}NU1.puml[NU1]
+
+{nbsp} +
+
+.Task Flow наміру 2
+//image::{url}NU2.puml[NU2]
+
+{nbsp} +
+
+.Task Flow наміру 3
+//image::{url}NU3.puml[NU3]
+
+
+=== Авторизований користувач
+
+==== Високорівневі наміри
+
+Актор Авторизований користувач має такі високорівневі наміри:
+
+. переглянути інформацію про авіарейси
+. замовити квиток
+. переглянути або/та відредагувати інформацію зі свого профілю
+. дізнатися більше про аеропорт
+
+==== Task Flow
+
+Task Flow для намірів 1 та 4 збігаються з намірами 1 та 3 Неавторизованого корисутувача відповідно.
+
+Для подальших Task Flow вважатимемо, що Авторизований користувач вже відкрив сайт та, звичайно ж, авторизований в системі.
+
+.Task Flow наміру 2
+//image::{url}AU2.puml[AU2]
+
+{nbsp} +
+
+.Task Flow наміру 3
+//image::{url}AU3.puml[AU3]
+
+
+=== Адміністратор
+
+==== Високорівневі наміри
+
+Актор Адміністратор має такі високорівневі наміри:
+
+. переглянути списки авіарейсів, користувачів, замовлень
+. адмініструвати інформацію про існуючі рейс, користувача, замовлення
+. додати новий рейс 
+
+==== Task Flow
+
+У наведених Task Flow вважається, що Адміністратор вже відкрив сайт та авторизувався в системі.
+
+.Task Flow наміру 1
+//image::{url}A1.puml[A1]
+
+{nbsp} +
+
+.Task Flow наміру 2
+//image::{url}A2.puml[A2]
+
+{nbsp} +
+
+.Task Flow наміру 3
+//image::{url}A3.puml[A3]
+
+
 == Опис передбачених сторінок
 
 === Інтерфейс користувача
@@ -42,8 +140,6 @@
 * Order CRUD
 
 === Підтримка варіантів використання
-
-TODO: уточнити поля юзера, рейсу; з'ясувати, чи явно вказувати елементи інтерфейсу 
 
 .Опис вмісту сторінок  веб-застосунку на підртимку варіантів використання
 [width="100%", cols=5]
@@ -112,7 +208,7 @@ a|
 * Клас
 * Кількість квитків
 * Коментар до завмовлення
-* Ціна
+* Вартість
 a|Перегляд даних; вибір з переліку; введення даних
 
 a|Choose Payment Method
@@ -143,7 +239,7 @@ a|
 * Клас
 * Кількість квитків
 * Коментар до завмовлення
-* Ціна
+* Вартість
 a|Перегляд даних; завантаження даних
 
 .2+a|Profile Info
@@ -154,12 +250,13 @@ a|
 * прізвище
 * електронна пошта
 * номер мобільного телефону
+* додаткова інформація
 * пароль
 a|Зміна даних; введення даних
 
 a|AU4
 a|Видалення профілю
-a|
+a|—
 a|Видалення даних
 
 a|View History
@@ -177,8 +274,16 @@ a|Перегляд даних
 a|Будь-яка сторінка інтерфейсу користувача (окрім User Sign Up та User Log In)
 a|AU2
 a|Деавторизація
+a|—
+a|—
+
+a|About Us
+a|Намір Неавторизованого користувача №3
+a|дізнатися більше про аеропорт
 a|
-a|?
+* відомості про аеропорт
+* контактна інформація
+a|Перегляд даних
 
 a|View Flight List
 .2+a|A1
@@ -196,6 +301,7 @@ a|
 * Доступні класи
 * Доступні місця
 * Ціна
+* Список замовлень
 a|Введення даних; перегляд даних; зміна даних; видалення даних
 
 a|View User List
@@ -211,6 +317,7 @@ a|
 * прізвище
 * електронна пошта
 * номер мобільного телефону
+* додаткова інформація
 * кількість доступних бонусів
 * історія замовлень
 a|Введення даних; перегляд даних; зміна даних; видалення даних
@@ -233,182 +340,160 @@ a|
 * Клас
 * Кількість квитків
 * Коментар до завмовлення
-* Ціна
+* Вартість
 a|Введення даних; перегляд даних; зміна даних; видалення даних
 
 a|Administrator Log In
-.2+a|F4
-.2+a|Авторизація Адміністраторів
+a|F4
+a|Авторизація Адміністраторів
 a|
 * логін
 * пароль
 a|Введення даних
 
-a|Будь-яка сторінка інтерфейсу Адміністратора (окрім Administrator Log In)
-a|
-a|?
+|=====================================
+
+== Уточнення моделі вмісту для критичного варіанта використання AU1. Придбання або бронювання квитка
+
+=== Уточнений опис вмісту сторінок Веб-застосунку для підтримки потоків критичного варіанта використання
+
+.Уточнений опис вмісту сторінок Веб-застосунку на підтримку базового потоку критичного варіанта використання
+[width="100%", cols=5]
+|=====================================
+.2+h|Ім'я сторінки/Намір
+2+h|Крок критичного варіанта використання 
+.2+h|Елемент даних для виконання варіанта 
+.2+h|Операція з даними
+h|Код
+h|Найменування
+
+a|View Flight
+a|1
+a|Авторизований користувач натискає кнопку "Замовити"
+a|—
+a|—
+
+.2+a|View Flight Order
+a|2
+a|Система показує інтерфейс для уточнення замовлення
+.2+a|
+* Номер рейсу
+* Дата вильоту
+* Час вильоту
+* Тривалість польоту
+* Клас
+* Кількість квитків
+* Коментар до завмовлення
+* Вартість
+a|Відображення даних
+
+a|3
+a|Авторизований користувач вказує бажаний клас квитка, кількість місць, коментар
+a|Введення даних; перегляд даних
+
+.3+a|Choose Payment Method
+a|4
+a|Система показує наступний інтерфейс для вибору типу оплати
+.3+a|
+* Список доступних способів оплати 
+.3+a|Вибір з переліку
+
+a|5
+a|Користувач обирає серед варіантів: "Оплатити в касі", "Олатити частину бонусами", "Оплатити повністю"
+
+a|6
+a|Користувач натискає "Оплатити повністю"
+
+.2+a|Checkout
+a|7
+a|Система відображає інтерфейс для введення даних для оплати онлайн
+.2+a|
+* номер платіжної карти
+* строк дії карти
+* CVV
+* Вартість
+a|Відображення даних
+
+a|8
+a|Користувач вводить дані для оплати, натискає "Оплатити"
+a|Введення даних; перегляд даних
+
+.3+a|View Completed Order
+a|9
+a|Система надислає запит на транзакцію, що проводиться успішно
+.2+a|
+* номер платіжної карти
+* строк дії карти
+* CVV
+* Вартість
+.2+a|Передача даних; збереження даних
+
+a|10
+a|Система фіксує замовлення і відображає інтерфейс з надписом "Замовлення виконано успішно" і надає клієнту інформацію про нього
+
+a|11
+a|Користувач натискає кнопку "Ок" і завершує прецедент
+a|—
+a|—
 
 |=====================================
 
 
-== Діяльність акторів
+.Уточнений опис вмісту сторінок Веб-застосунку на підтримку альтернативного потоку "Оплата бонусами" критичного варіанта використання
+[width="100%", cols=5]
+|=====================================
+.2+h|Ім'я сторінки/Намір
+2+h|Крок критичного варіанта використання 
+.2+h|Елемент даних для виконання варіанта 
+.2+h|Операція з даними
+h|Код
+h|Найменування
 
-=== Неавторизований користувач
+.2+a|Bonuses Checkout
+a|1
+a|Система відображає інтерфейс для обрання частки суми, що користувач бажає оплатити бонусами. Користувач може вказати суму не більшу ніж має бонусів на рахунку, а також частка оплати валютою має складати щонайменше 1 найменшу одиницю валюти, в якій проводиться розрахунки в системі.
+.2+a|
+* кількість доступних бонусів
+* кількість бонусів для використання
+a|Відображення даних
 
-==== Високорівневі наміри
+a|2
+a|Користувач указує суму бонусів, що бажає витратити.
+a|Введення даних
 
-Актор Неавторизований користувач має такі високорівневі наміри:
+5+a|Наступний крок передбачає повернення до базового потоку
+|=====================================
 
-* переглянути доступні рейси, що задовольняють певні критерії
-* переглянути повну інформацію про авіарейс
-* зареєструватися
-* зайти в існуючий профіль
-* переглянути інформацію про сайт
-* зв'язатися зі службою підтримки аеропорту
+.Уточнений опис вмісту сторінок Веб-застосунку на підтримку альтернативного потоку "Помилка оплати" критичного варіанта використання
+[width="100%", cols=5]
+|=====================================
+.2+h|Ім'я сторінки/Намір
+2+h|Крок критичного варіанта використання 
+.2+h|Елемент даних для виконання варіанта 
+.2+h|Операція з даними
+h|Код
+h|Найменування
 
-==== Task Flow
+a|Payment Error
+a|1
+a|Система сповіщає користувача про помилку.
+a|
+* Інформація про помилку
+a|Перегляд даних
 
-.Task Flow наміру "переглянути доступні рейси, що задовольняють певні критерії"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU1.puml[NU1]
+5+a|Наступний крок передбачає повернення до базового потоку
+|=====================================
 
-{nbsp} +
+Альтернативний потік "Оплата в касі" лише передбачає пропуск деяких кроків базового потоку і не потребує додаткових сторінок.
 
-.Task Flow наміру "переглянути повну інформацію про авіарейс"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU2.puml[NU2]
-
-{nbsp} +
-
-.Task Flow наміру "зареєструватися"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU3.puml[NU3]
-
-{nbsp} +
-
-.Task Flow наміру "зайти в існуючий профіль"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU4.puml[NU4]
-
-{nbsp} +
-
-.Task Flow наміру "переглянути інформацію про сайт"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU5.puml[NU5]
-
-{nbsp} +
-
-.Task Flow наміру "зв'язатися зі службою підтримки аеропорту"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/NU6.puml[NU6]
-
-
-=== Авторизований користувач
-
-==== Високорівневі наміри
-
-Актор Авторизований користувач має такі високорівневі наміри:
-
-* переглянути доступні рейси, що задовольняють певні критерії
-* переглянути повну інформацію про авіарейс
-* замовити квиток
-* переглянути або/та відредагувати інформацію свого профілю
-* переглянути історію замовлених перельотів
-* переглянути доступні бонуси
-* вийти з профілю
-* видалити профіль
-* переглянути інформацію про сайт
-* зв'язатися зі службою підтримки аеропорту
-
-==== Task Flow
-
-Task Flow для намірів "переглянути доступні рейси, що задовольняють певні критерії", "переглянути повну інформацію про авіарейс", "переглянути інформацію про сайт" та "зв'язатися зі службою підтримки аеропорту" збігаються з аналогічними для Неавторизованого корисутувача.
-
-Для подальших Task Flow вважатимемо, що Авторизований користувач вже відкрив сайт.
-
-.Task Flow наміру "замовити квиток"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU3.puml[AU3]
-
-{nbsp} +
-
-.Task Flow наміру "переглянути або/та відредагувати інформацію свого профілю"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU4.puml[AU4]
-
-{nbsp} +
-
-.Task Flow наміру "переглянути історію замовлених перельотів"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU5.puml[AU5]
-
-{nbsp} +
-
-.Task Flow наміру "переглянути доступні бонуси"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU6.puml[AU6]
-
-{nbsp} +
-
-.Task Flow наміру "вийти з профілю"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU7.puml[AU7]
-
-{nbsp} +
-
-.Task Flow наміру "видалити профіль"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/AU8.puml[AU8]
+Для підтримки альтернативного потоку "Зміна рішення користувача щодо придбання" на кожній згаданій сторінці задіяного інтерфейсу передбачена кнопка "Go Back", що дозволяє повернутися на крок назад і, як наслідок, не оформлювати замовлення.
 
 
-=== Адміністратор
+=== Wireflow для критичного варіанта використання
 
-==== Високорівневі наміри
+Єдиним актором цього критичного варіанта використання є Авторизований користувач.
 
-Актор Адміністратор має такі високорівневі наміри:
+.Wireflow для критичного варіанта використання: 1 - View Flight; 2 - View Flight Order; 3 - Choose Payment Method; 4 - Bonuses Checkout; 5 - Checkout; 6 - View Completed Order; 7 - Payment Error
+//image::{wurl}[wireflow]
 
-* авторизуватися в системі
-* переглянути список авіарейсів
-* адмініструвати інформацію про існуючий рейс
-* додати новий рейс
-* переглянути список користувачів
-* адмініструвати інформацію про існуючого користувача
-* переглянути список замовлень
-* адмініструвати інформацію про існуюче замовлення
-* вийти з системи
-
-==== Task Flow
-
-.Task Flow наміру "авторизуватися в системі"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A1.puml[A1]
-
-Для подальших Task Flow вважатимемо, що Адміністратор вже відкрив сайт та авторизувався в системі.
-
-.Task Flow наміру "переглянути список авіарейсів"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A2.puml[A2]
-
-{nbsp} +
-
-.Task Flow наміру "адмініструвати інформацію про існуючий рейс"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A3.puml[A3]
-
-{nbsp} +
-
-.Task Flow наміру "додати новий рейс"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A4.puml[A4]
-
-{nbsp} +
-
-.Task Flow наміру "переглянути список користувачів"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A5.puml[A5]
-
-{nbsp} +
-
-.Task Flow наміру "адмініструвати інформацію про існуючого користувача"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A6.puml[A6]
-
-{nbsp} +
-
-.Task Flow наміру "переглянути список замовлень"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A7.puml[A7]
-
-{nbsp} +
-
-.Task Flow наміру "адмініструвати інформацію про існуюче замовлення"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A8.puml[A8]
-
-{nbsp} +
-
-.Task Flow наміру "вийти з системи"
-image::https://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/carexoid/se-lab/ux/doc/ux/A9.puml[A9]
-
-
-== Уточнення моделі вмісту для критичного прецедента
+Можливість зворотніх переходів для підтримки альтернативного потоку "Зміна рішення користувача щодо придбання" передбачена, однак не відображена на діаграмі аби не перенавантажувати її.
