--- a/doc/ux/ux.adoc
+++ b/doc/ux/ux.adoc
@@ -156,6 +156,7 @@ a|U1
 a|Пошук та перегляд авіарейсів за параметрами
 a|
 * Номер рейсу
+* Пункт прибуття
 * Дата вильоту
 * Діапазон часу вильоту
 * Діапазон тривалісті польоту
@@ -170,6 +171,7 @@ a|U2
 a|Отримання інформації по авіарейсу
 a|
 * Номер рейсу
+* Пункт прибуття
 * Дата вильоту
 * Час вильоту
 * Тривалість польоту
@@ -202,6 +204,7 @@ a|View Flight Order
 .5+a|Придбання або бронювання квитка
 a|
 * Номер рейсу
+* Пункт прибуття
 * Дата вильоту
 * Час вильоту
 * Тривалість польоту
@@ -233,6 +236,7 @@ a|View Completed Order
 a|
 * Номер замовлення
 * Номер рейсу
+* Пункт прибуття
 * Дата вильоту
 * Час вильоту
 * Тривалість польоту
@@ -334,6 +338,7 @@ a|
 * Номер замовлення
 * Замовник
 * Номер рейсу
+* Пункт прибуття
 * Дата вильоту
 * Час вильоту
 * Тривалість польоту
@@ -378,6 +383,7 @@ a|2
 a|Система показує інтерфейс для уточнення замовлення
 .2+a|
 * Номер рейсу
+* Пункт прибуття
 * Дата вильоту
 * Час вильоту
 * Тривалість польоту
