#3 fix one 1 sentence

--- a/doc/ux/ux.adoc
+++ b/doc/ux/ux.adoc
@@ -492,7 +492,7 @@ a|Перегляд даних
 
 Альтернативний потік "Оплата в касі" лише передбачає пропуск деяких кроків базового потоку і не потребує додаткових сторінок.
 
-Для підтримки альтернативного потоку "Зміна рішення користувача щодо придбання" на кожній згаданій сторінці задіяного інтерфейсу передбачена кнопка "Go Back", що дозволяє повернутися на крок назад і, як наслідок, не оформлювати замовлення.
+Для підтримки альтернативного потоку "Зміна рішення користувача щодо придбання" на кожній сторінці, що передує оплаті, передбачена кнопка "Go Back", що дозволяє повернутися на крок назад і, як наслідок, не оформлювати замовлення. "Go Back" на сторінках View Completed Order та Payment Error повернуть на початкову сторінку прецеденту View Flight.
 
 
 === Wireflow для критичного варіанта використання
