[#8] missing class diagram added

--- a/doc/architecture/architecture.adoc
+++ b/doc/architecture/architecture.adoc
@@ -32,8 +32,9 @@ image:{url}RL5BReKm3Dpd55o0ExpNHTLTAr4E4845KVD1ZbE9srV2jaAQnyep3CDu_CXaaKhmm-6jY
 
 == Діаграма класів
 
+Нижче наведена діаграма класів.
 .Діаграма класів
-image:{url}[classes]
+image:{url}bPFRpX8n4CVl-nIz_4XO7s1ZDXZ1muqQ3jTct0xGqCDcEej1uxjBMzQok9ZO2s0wl_dFeSCYC13treZMG0ZoJS_73T8PIVuKydfQGc1ySM1nBj62DdFPNSdldjHCxW9Imk0Qvqd_m9U_cAq_eKlG6OnMKIrTpUGtxutu9ORKocetoltwxNgtbBv30jRUXUOErjHvuXkeLIsru_GxLbhBm9GzRk-JLK9ZpHDngUwCbhxLL-1QnffPMtmLFuhGPr9JIiz3apSmCDPo4x-ArbQt9vng1vHwBeN0XOmJHtT0UkXtgGdREBy9zJrvMm_3J3ViY_r7uftHXsEfJdxyj5szNwsJgR2B6qJuf4WWqcSm_sWXtFL0kiLabkHVu6BH3Td1-jxn0x91eFRuGGVsTFcV5uaIQH_IgQfcB2NAxAhAF_Y65PGJlhmQClk63aPgpMse8xJ9VwYy34Dq0aIc1omJenAQyj12BD2ftfhV[classes]
 
 == Схема бази даних
 
