[#8] Create robustness diagram

--- a/doc/architecture/architecture.adoc
+++ b/doc/architecture/architecture.adoc
@@ -27,6 +27,8 @@ image:{url}RL5BReKm3Dpd55o0ExpNHTLTAr4E4845KVD1ZbE9srV2jaAQnyep3CDu_CXaaKhmm-6jY
 * СУБД — MySQL, завдяки своїй простоті та надійності ідеально підходить для доменної області.
 
 == Діаграма придатності
+image:{url}
+TLD1Rziy3BthLn2-zm_qyA7ValGo31bQR7V5PcAZibX8r8Rkry-Yh4bot4CGyhr7YoAVdZnhns4sIlTC3hh_0u_afZyum0-FhjDU_jM5WXsq-u3kvuI_uTbCjv4Z6zEKxMlWx0Pq7JHImIhzOIJo2D_rnuoMuHloI8FK96ObgeelP8F7oECR1HRjYZNVnVuVdPDjdmUQtmqo3fjMjqtcxaxEaQXIf5HFbXsPHH7y2EUNu-a5Be6PR3etmlAneZnPHWSKGHYGzMHyqWfnJ4YHh_DvNpkOg_aaAaqi5qYlYLw2WhuoEKod9bO0QGssj_ZQNE7yjkrTpnGi0rtXigw22PR_wXfv7zjhw9udig2lyJkOfYb5CNmbyskoDwNGyiJBs5DxnpAa7BSAOIHAUF58MbLkHaKxmyD3RTmIBiH_zS9AACp6mL1L5b6xmoOJ_dEcDNkJ2TykMpMf2BB5uH6wvs1CTaodCYCoSSLU_JgaMBwCAM-sKoikcdQtJIRywLEgl40LEn2ejk1ZUMC-z3rwVmscKsL2ZLpbW-w8AXPk7orFV0VR3cU_LPWizDgFNNKXCN5zbMHm9RWeMfytsPqBP9E7KTlRtUjlArjxfZ9jUpJhSrTAl5gk6f_qyjlKgIUqGvZDNm00[robustness]
 
 == Діаграма послідовності
 
